--- a/web/mobile/index.html
+++ b/web/mobile/index.html
@@ -31,8 +31,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</select>
 		</div>
 	<div class="banner">
-		<h2 class="style">I want to feel what you wanted</h2>
-		<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+		<h2 class="style">RockStone Gym</h2>
+		<p class="para">We care about your health and fitness. </p>
 	</div>
 </div>
 </div>
