--- a/web/smartphone/index.html
+++ b/web/smartphone/index.html
@@ -57,8 +57,8 @@ hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </scri
 	 <script type="text/javascript" src="smartphone/js/script.js"></script>
 	<div class="clear"></div>
 	<div class="banner">
-		<h2 class="style">i want to feel What you wanted</h2>
-		<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+		<h2 class="style">RockStone Gym</h2>
+		<p class="para">We care about your health and fitness. </p>
 	</div>
 </div>
 </div>
