--- a/web/web/index.html
+++ b/web/web/index.html
@@ -54,8 +54,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	 <script type="text/javascript" src="web/js/script.js"></script>
 	<div class="clear"></div>
 	<div class="banner">
-		<h2 class="style">i want to feel What you wanted</h2>
-		<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+		<h2 class="style">RockStone Gym</h2>
+		<p class="para">We care about your health and fitness. Teach you how to stay fit from day to day life and provide you online training and cources for the fitness programs. </p>
 	</div>
 </div>
 </div>
