--- a/web/web/index.html
+++ b/web/web/index.html
@@ -1,9 +1,3 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -20,7 +14,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<script type="text/javascript">
 				$(function() {
 				
-					$('#da-slider').cslider({
+					$('#da-slider', '#da-slider-2').cslider({
 						autoplay	: true,
 						bgincrement	: 450
 					});
@@ -129,30 +123,31 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="slider_bg">
 <div class="wrap">
 	<div class="slider">
-				<!---start-da-slider----->
-				<div id="da-slider" class="da-slider">
+			<!---start-da-slider----->
+			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
 					<h2>Welcome to our website</h2>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				</div>
-				<div class="da-slide">
-					<h2>Clean & Flat Design</h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				</div>
-				<div class="da-slide">
-					<h2>Clean & Flat Design</h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				</div>
-				<div class="da-slide">
-					<h2>Welcome to our website</h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				</div>			
+				</div>	
 				<nav class="da-arrows">
 					<span class="da-arrows-prev"></span>
 					<span class="da-arrows-next"></span>
 				</nav>
 			</div>
  			<!---//End-da-slider----->
+
+			<!---start-da-slider-2----->
+			<div id="da-slider-2" class="da-slider-2">
+				<div class="da-slide">
+					<h2>Clean & Flat Design</h2>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				</div>		
+				<nav class="da-arrows">
+					<span class="da-arrows-prev"></span>
+					<span class="da-arrows-next"></span>
+				</nav>
+			</div>
+ 			<!---//End-da-slider-2----->
  	</div>
 </div>
 </div>
