--- a/web/web/index.html
+++ b/web/web/index.html
@@ -6,93 +6,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 <link href="web/css/style.css" rel="stylesheet" type="text/css" media="all" />
-<link rel='stylesheet' id='camera-css'  href='web/css/camera.css' type='text/css' media='all'> 
-<style>
-html,body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-}
-a {
-	color: #09f;
-}
-a:hover {
-	text-decoration: none;
-}
-.fluid_container {
-	bottom: 0;
-	height: 100%;
-	left: 0;
-	position: fixed;
-	right: 0;
-	top: 0;
-	z-index: 0;
-}
-#camera_wrap_4 {
-	bottom: 0;
-	height: 100%;
-	left: 0;
-	margin-bottom: 0!important;
-	position: fixed;
-	right: 0;
-	top: 0;
-}
-.camera_bar {
-	z-index: 2;
-}
-.camera_thumbs {
-	margin-top: -100px;
-	position: relative;
-	z-index: 1;
-}
-.camera_thumbs_cont {
-	border-radius: 0;
-	-moz-border-radius: 0;
-	-webkit-border-radius: 0;
-}
-.camera_overlayer {
-	opacity: .1;
-}
-</style>
-<script type='text/javascript' src='../scripts/jquery.mobile.customized.min.js'></script>
-<script type='text/javascript' src='../scripts/jquery.easing.1.3.js'></script> 
-<script type='text/javascript' src='../scripts/camera.min.js'></script> 
 <script type="text/javascript" src="web/js/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="web/css/slider.css" />
-<script type="text/javascript" src="web/js/modernizr.custom.28468.js"></script>
-<script type="text/javascript" src="web/js/jquery.cslider.js"></script>
-<script type="text/javascript">
-	$(function() {
-
-		$('#da-slider').cslider({
-			autoplay	: true,
-			bgincrement	: 450
-		});
-
-	});
-</script>
+	 	<!---strat-slider---->
+	    <link rel="stylesheet" type="text/css" href="web/css/slider.css" />
+		<script type="text/javascript" src="web/js/modernizr.custom.28468.js"></script>
+		<script type="text/javascript" src="web/js/jquery.cslider.js"></script>
+			<script type="text/javascript">
+				$(function() {
+				
+					$('#da-slider').cslider({
+						autoplay	: true,
+						bgincrement	: 450
+					});
+				
+				});
+			</script>
+		<!---//strat-slider---->
+<!-- start top_js_button -->
 <script type="text/javascript" src="web/js/move-top.js"></script>
 <script type="text/javascript" src="web/js/easing.js"></script>
-<script type="text/javascript">
-	jQuery(function(){
-		jQuery('#camera_wrap_4').camera({
-			height: 'auto',
-			loader: 'bar',
-			pagination: false,
-			thumbnails: true,
-			hover: false,
-			opacityOnGrid: false,
-			imagePath: '../images/'
+   <script type="text/javascript">
+		jQuery(document).ready(function($) {
+			$(".scroll").click(function(event){		
+				event.preventDefault();
+				$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
+			});
 		});
-	});
-
-	jQuery(document).ready(function($) {
-		$(".scroll").click(function(event){		
-			event.preventDefault();
-			$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
-		});
-	});
-</script>
+	</script>
 </head>
 <body>
 <!-- start header -->
@@ -180,15 +120,36 @@ a:hover {
 </div>
 </div>
 <!-- start slider -->
-	<div class="fluid_container">
-	<div class="camera_wrap camera_emboss pattern_1" id="camera_wrap_4">
-	    <div data-thumb="web/images/thumbs/slide-1.jpg" data-src="web/images/slide-1.jpg">
-	    </div>
-	    <div data-thumb="web/images/thumbs/slide-2.jpg" data-src="web/images/slide-2.jpg">
-	    </div>
-	    <div data-thumb="web/images/thumbs/slide-3.jpg" data-src="web/images/slide-3.jpg">
-	    </div>
-	</div>
+<div class="slider_bg">
+<div class="wrap">
+	<div class="slider">
+				<!---start-da-slider----->
+				<div id="da-slider" class="da-slider">
+				<div class="da-slide">
+					<h2>Welcome to our website</h2>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				</div>
+				<div class="da-slide">
+					<h2>Clean & Flat Design</h2>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				</div>
+				<div class="da-slide">
+					<h2>Clean & Flat Design</h2>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				</div>
+				<div class="da-slide">
+					<h2>Welcome to our website</h2>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				</div>			
+				<nav class="da-arrows">
+					<span class="da-arrows-prev"></span>
+					<span class="da-arrows-next"></span>
+				</nav>
+			</div>
+ 			<!---//End-da-slider----->
+ 	</div>
+</div>
+</div>
 <!-- start main -->
 <div class="wrap">
 	<div class="main">
