landing page changes

--- a/web/smartphone/index.html
+++ b/web/smartphone/index.html
@@ -347,7 +347,7 @@ jQuery(document).ready(function($) {
 					<h4>get in touch</h4>
 					<p class="btm">We have started new chain of Gyms in india and looking for the curious people who want to open a new GYM in india according to world standard or want to  convert his/her existing GYM to global level GYM with @RockStone GYM.</p>
 					<p class="btm1 pin">Faridabad, Haryana, India</p>
-					<p class="btm1 mail"><a href="rockstonegym@rockstonegym.com">info@rockstone.com </a></p>
+					<p class="btm1 mail"><a href="mailto:rockstonegym@rockstonegym.com">info@rockstone.com </a></p>
 					<p class="call">91-9810700893</p>
 				</div>
 				<div class="clear"></div>
