--- a/web/web/index.html
+++ b/web/web/index.html
@@ -2,14 +2,14 @@
 <html> 
 <head> 
 <title>RockStone home</title>
-<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" > 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 <link href="web/css/style.css" rel="stylesheet" type="text/css" media="all" />
-<link rel='stylesheet' id='camera-css'  href='css/camera.css' type='text/css' media='all'>
+<link rel='stylesheet' id='camera-css'  href='web/css/camera.css' type='text/css' media='all'>
 
-<link rel="stylesheet" type="text/css" href="css/slider.css" /> 
+<link rel="stylesheet" type="text/css" href="web/css/slider.css" /> 
 <style>
 body {
 	margin: 0;
@@ -26,15 +26,15 @@ a:hover {
 	font-family: cursive;
 }
 </style>
-<script type='text/javascript' src='js/jquery.min.js'></script>
-<script type='text/javascript' src='js/jquery.mobile.customized.min.js'></script>
-<script type='text/javascript' src='js/jquery.easing.1.3.js'></script> 
-<script type='text/javascript' src='js/camera.min.js'></script> 
+<script type='text/javascript' src='web/js/jquery.min.js'></script>
+<script type='text/javascript' src='web/js/jquery.mobile.customized.min.js'></script>
+<script type='text/javascript' src='web/js/jquery.easing.1.3.js'></script> 
+<script type='text/javascript' src='web/js/camera.min.js'></script> 
 
-<script type="text/javascript" src="js/modernizr.custom.28468.js"></script>
-<script type="text/javascript" src="js/jquery.cslider.js"></script>
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="web/js/modernizr.custom.28468.js"></script>
+<script type="text/javascript" src="web/js/jquery.cslider.js"></script>
+<script type="text/javascript" src="web/js/move-top.js"></script>
+<script type="text/javascript" src="web/js/easing.js"></script>
 <script>
 jQuery(function(){
 	jQuery('#main_page_wrap').camera({
@@ -145,37 +145,37 @@ jQuery(document).ready(function(jQuery) {
 
 		<!-- Start of slider -->
 		<div class="camera_wrap camera_emboss" id="main_page_wrap">
-		  	<div data-thumb="images/slides/thumbs/main-slider-image-1.jpg" data-src="images/slides/main-slider-image-1.jpg">
+		  	<div data-thumb="web/images/slides/thumbs/main-slider-image-1.jpg" data-src="web/images/slides/main-slider-image-1.jpg">
 				<div class="camera_caption fadeFromBottom">
 					<h2>Take a step forward toward your health and look smart.</h2>
 					<p>With regular light and intensive workouts with @RockStone you can have a strong body and appreciable physic.</p>
 				</div>	    
 			</div>
-			<div data-thumb="images/slides/thumbs/main-slider-image-2.jpg" data-src="images/slides/main-slider-image-2.jpg">
+			<div data-thumb="web/images/slides/thumbs/main-slider-image-2.jpg" data-src="web/images/slides/main-slider-image-2.jpg">
 				<div class="camera_caption fadeFromBottom">
 					<h2>Health drinks and supplements.</h2>
 					<p>We give you best advice on supplements and health drinks and provide wide varities of same in @RockStone Shop.</p>
 				</div>    
 			</div>
-			<div data-thumb="images/slides/thumbs/main-slider-image-3.jpg" data-src="images/slides/main-slider-image-3.jpg">
+			<div data-thumb="web/images/slides/thumbs/main-slider-image-3.jpg" data-src="web/images/slides/main-slider-image-3.jpg">
 				<div class="camera_caption fadeFromBottom">
 					<h2>Secret of strong and attractive Abs.</h2>
 					<p>Secret of building and @RockStone abs and look attractive, impressive with your shapped and toned Abs.</p>
 				</div>   
 			</div>
-			<div data-thumb="images/slides/thumbs/main-slider-image-3.jpg" data-src="images/slides/main-slider-image-3.jpg">
+			<div data-thumb="web/images/slides/thumbs/main-slider-image-3.jpg" data-src="web/images/slides/main-slider-image-3.jpg">
 				<div class="camera_caption fadeFromBottom">
 					<h2>@RockStone gym Coaches.</h2>
 					<p>We have skills coaches to teach you how to workout and inprove your eating habbits with @RockStone.</p>
 				</div>   
 			</div>
-			<div data-thumb="images/slides/thumbs/main-slider-image-3.jpg" data-src="images/slides/main-slider-image-3.jpg">
+			<div data-thumb="web/images/slides/thumbs/main-slider-image-3.jpg" data-src="web/images/slides/main-slider-image-3.jpg">
 				<div class="camera_caption fadeFromBottom">
 					<h2>Health and nutrition tips.</h2>
 					<p>We provide you best health and nutrition tips to stay healthy and keep your body in shape with @RockStone.</p>
 				</div>   
 			</div>
-			<div data-thumb="images/slides/thumbs/main-slider-image-3.jpg" data-src="images/slides/main-slider-image-3.jpg">
+			<div data-thumb="web/images/slides/thumbs/main-slider-image-3.jpg" data-src="web/images/slides/main-slider-image-3.jpg">
 				<div class="camera_caption fadeFromBottom">
 					<h2>Certification programs.</h2>
 					<p>We have certification and fitness programs arranged all areas and join us to know secret of @RockStone.</p>
@@ -195,17 +195,17 @@ jQuery(document).ready(function(jQuery) {
 			<!-- start grids_of_3 -->
 			<div class="grids_of_3">
 				<div class="grid1_of_3">
-					<img src="images/icon1.png" alt=""/>
+					<img src="web/images/icon1.png" alt=""/>
 					<h3><a href="#">Watch online videos with <span> @RockStone Gym </span> </a></h3>
 					<p>We have a best quality videos who can guide you with proper excercise and health tips.</p>
 				</div>
 				<div class="grid1_of_3">
-					<img src="images/icon2.png" alt=""/>
+					<img src="web/images/icon2.png" alt=""/>
 					<h3><a href="#">Simply write to <span> @RockStone Gym </span> </a></h3>
 					<p>To get advice threw mail write your queries to @RockStone advisers who can guide you better in proper direction toward your health.</p>
 				</div>
 				<div class="grid1_of_3">
-					<img src="images/icon3.png" alt=""/>
+					<img src="web/images/icon3.png" alt=""/>
 					<h3><a href="#">Read online articles with <span> @RockStone Gym </span> </a></h3>
 					<p>We have best quality articles and blogs with us written directly by @RockStone Gym experts which can guide you with health and Nutrition tips.</p>
 				</div>
@@ -223,21 +223,21 @@ jQuery(document).ready(function(jQuery) {
 				<!-- start span_of_3 -->
 				<div class="span_of_3">
 					<div class="span1_of_3">
-						<a href="details.html"><img src="images/health_drinks.jpg" alt=""/></a>
+						<a href="details.html"><img src="web/images/health_drinks.jpg" alt=""/></a>
 						<div class="span1_of_3_text">
 							<h3><a href="details.html">Health Drinks with @RockStone GYM</a></h3>
 							<p>We provides you with best health drinks tips and advices in health drink section.</p>
 						</div>
 					</div>
 					<div class="span1_of_3">
-						<a href="details.html"><img src="images/nutrition.jpg" alt=""/></a>
+						<a href="details.html"><img src="web/images/nutrition.jpg" alt=""/></a>
 						<div class="span1_of_3_text">
 							<h3><a href="details.html">Nutrition Tips with @RockStone GYM</a></h3>
 							<p>We provides you the best Nutrition tips and easy muscle gainign tips at Nutrition tips section.</p>
 						</div>
 					</div>
 					<div class="span1_of_3">
-						<a href="details.html"><img src="images/exercise.jpg" alt=""/></a>
+						<a href="details.html"><img src="web/images/exercise.jpg" alt=""/></a>
 						<div class="span1_of_3_text">
 							<h3><a href="details.html">Muscles Excercise with @RockStone GYM</a></h3>
 							<p>We provide you with best videos, Images and articles for regular excercises with which you can gain attractive muscles easily.</p>
@@ -248,21 +248,21 @@ jQuery(document).ready(function(jQuery) {
 				<!--  -->
 				<div class="span_of_3">
 					<div class="span1_of_3">
-						<a href="details.html"><img src="images/opening_rockstone_gym.jpg" alt=""/></a>
+						<a href="details.html"><img src="web/images/opening_rockstone_gym.jpg" alt=""/></a>
 						<div class="span1_of_3_text">
 							<h3><a href="details.html">Opening new @RockStone GYM</a></h3>
 							<p>We provide you online as well as direct assistance to guide you how to be the part of global standard with @RockStone Gym.</p>
 						</div>
 					</div>
 					<div class="span1_of_3">
-						<a href="details.html"><img src="images/certified.jpg" alt=""/></a>
+						<a href="details.html"><img src="web/images/certified.jpg" alt=""/></a>
 						<div class="span1_of_3_text">
 							<h3><a href="details.html">@RockStone certification</a></h3>
 							<p>We provide a standard certification to Gym based on there level, consumer base and trainers.</p>
 						</div>
 					</div>
 					<div class="span1_of_3">
-						<a href="details.html"><img src="images/global_level.jpg" alt=""/></a>
+						<a href="details.html"><img src="web/images/global_level.jpg" alt=""/></a>
 						<div class="span1_of_3_text">
 							<h3><a href="details.html">Be the part of @RockStoen Gym</a></h3>
 							<p>We are providing the chance to small and middle size Gym to be the part of @RockStone Gym with our free convertion policy and take your GYm to global level.</p>
@@ -280,12 +280,12 @@ jQuery(document).ready(function(jQuery) {
 	<div class="wrap">
 			<ul id="flexiselDemo3">
 				<!--<li><img src="images/client1.jpg" /></li>
-				<li><img src="images/client6.jpg" /></li>
-				<li><img src="images/client2.jpg" /></li>
-				<li><img src="images/client5.jpg" /></li>
-				<li><img src="images/client4.jpg" /></li>
-				<li><img src="images/client3.jpg" /></li>
-				<li><img src="images/client4.jpg" /></li>-->
+				<li><img src="web/images/client6.jpg" /></li>
+				<li><img src="web/images/client2.jpg" /></li>
+				<li><img src="web/images/client5.jpg" /></li>
+				<li><img src="web/images/client4.jpg" /></li>
+				<li><img src="web/images/client3.jpg" /></li>
+				<li><img src="web/images/client4.jpg" /></li>-->
 			</ul>
 		<script type="text/javascript">
 	$(window).load(function() {
@@ -333,7 +333,7 @@ jQuery(document).ready(function(jQuery) {
 	    
 	});
 	</script>
-	<script type="text/javascript" src="js/jquery.flexisel.js"></script>
+	<script type="text/javascript" src="web/js/jquery.flexisel.js"></script>
 	</div>
 	<!-- Start Partners-->
 
@@ -372,7 +372,7 @@ jQuery(document).ready(function(jQuery) {
 					<h4>get in touch</h4>
 					<p class="btm">We have started new chain of Gyms in india and looking for the curious people who want to open a new GYM in india according to world standard or want to  convert his/her existing GYM to global level GYM with @RockStone GYM.</p>
 					<p class="btm1 pin">Faridabad, Haryana, India</p>
-					<p class="btm1 mail"><a href="rockstonegym@rockstonegym.com">info@rockstone.com </a></p>
+					<p class="btm1 mail"><a href="mailto:rockstonegym@rockstonegym.com">info@rockstone.com </a></p>
 					<p class="call">91-9810700893</p>
 				</div>
 				<div class="clear"></div>
