landing page changes

--- a/web/web/index.html
+++ b/web/web/index.html
@@ -61,7 +61,7 @@ jQuery(document).ready(function(jQuery) {
 			<div class="wrap">
 				<div class="header">
 					<div class="logo">
-						<a href="index.html"><img src="images/logo.png" alt=""/> </a>
+						<a href="index.html"><img src="web/images/logo.png" alt=""/> </a>
 					</div>
 					<div class="social-icons">
 					    <ul>
@@ -135,7 +135,7 @@ jQuery(document).ready(function(jQuery) {
 					$(".text").focus();
 				});
 			</script>
-			<script type="text/javascript" src="js/script.js"></script>
+			<script type="text/javascript" src="web/js/script.js"></script>
 			<div class="clear"></div>
 			<div class="clear"></div>
 			</div>
