landing page changes

--- a/web/web/about.html
+++ b/web/web/about.html
@@ -6,11 +6,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
-<link href="web/css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- start top_js_button -->
-<script type="text/javascript" src="web/js/jquery.min.js"></script>
-<script type="text/javascript" src="web/js/move-top.js"></script>
-<script type="text/javascript" src="web/js/easing.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
    <script type="text/javascript">
 		jQuery(document).ready(function($) {
 			$(".scroll").click(function(event){		
@@ -26,15 +26,15 @@
 <div class="wrap">
 	<div class="header">
 		<div class="logo">
-			<a href="index.html"><img src="web/images/logo.png" alt=""/> </a>
+			<a href="index.html"><img src="images/logo.png" alt=""/> </a>
 		</div>
 		<div class="social-icons">
 		    <ul>
 		      <li><a href="#" target="_blank"></a></li>
-			  <li><a href="#" target="_blank"></a></li>
-		      <li><a href="#" target="_blank"></a></li>
-			  <li><a href="#" target="_blank"></a></li>
-			</ul>
+			<li><a href="http://www.facebook.com/rockStoneGym" target="_blank"></a></li>
+		      	<li><a href="#" target="_blank"></a></li>
+			<li><a href="http://www.linkedin.com/company/rockstone-gym" target="_blank"></a></li>
+		     </ul>
 		</div>
 		<div class="clear"></div>
 	</div>
@@ -48,9 +48,9 @@
 			<ul>
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="about.html">About us</a></li>
-				<li><a href="service.html">Service</a></li>
-				<li><a href="index.html">Pages</a></li>
-				<li><a href="blog.html">Blog</a></li>
+				<li><a href="service.html">Gym Locator</a></li>
+				<li><a href="index.html">Videos</a></li>
+				<li><a href="blog.html">Articles</a></li>
 				<li><a href="contact.html">Contact us</a></li>
 			</ul>
 		</div>
@@ -64,9 +64,9 @@
         	<ul>
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="about.html">About us</a></li>
-				<li><a href="service.html">Service</a></li>
-				<li><a href="index.html">Pages</a></li>
-				<li><a href="blog.html">Blog</a></li>
+				<li><a href="service.html">Gym Locator</a></li>
+				<li><a href="index.html">Videos</a></li>
+				<li><a href="blog.html">Artcles</a></li>
 				<li><a href="contact.html">Contact us</a></li>
             </ul>
         </div>
@@ -98,7 +98,7 @@
 			$(".text").focus();
 		});
 	</script>
-	<script type="text/javascript" src="web/js/script.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 	<div class="clear"></div>
 
 		<div class="clear"></div>
@@ -109,7 +109,7 @@
 <div class="top_bg">
 <div class="wrap">
 	<div class="top">
-		<h2>about us</h2>
+		<h2>About Us</h2>
  	</div>
 </div>
 </div>
@@ -119,9 +119,9 @@
 		<div class="about">
 	       <div class="cont-grid">
 	       <div class="abt-para">
-	       	<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-	       	<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry., Lorem Ipsum  dummy text ever since dummy text of the printing and usings 1500s,Duis aute irure dolor in reprehenderit in voluptate velit esse when an,Lorem Ipsum has been the industry's standard dummy text ever since dummy text of the printing and usings 1500s, </p>
-	       	<p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+	       	<span>RockStone Gym is the chain of Gyms holding its name in fitness domain and maintaining the global standards for Gyms associated.</span>
+	       	<p class="para">Its first industry of its type which gives consultancy, certification and association to all level of Gyms and maintaining there standards with regualar survey and monitoring process. Growing demands of gyms as people going fitness freak we opened which company to help consumer as well as gym providers to train and certify with our fitness programs. </p>
+	       	<p class="para">We are first open frenchie distributor of @RockStone Gym with bare minimum requirement. This program is open to all type of Gym vendors who like to reach at gloabal standard and want to increase there consumer base. Consultancy also be provided to new vendors for opening new Gym with @RockStone Gym standard. </p>
 			<div class="read_more">
 				 <a class="btn" href="details.html">read more</a>
 			</div>
@@ -129,13 +129,19 @@
 	      	 <div class="clear"></div>
 	      	</div>
 			 <div class="cont-grid-img img_style">
-	     		<a href="details.html"><img src="web/images/about_pic.jpg" alt=""></a>
+	     		<a href="details.html"><img src="images/my_picture.jpg" alt=""></a>
 	     	</div>	      	
 	      	<div class="clear"></div>
 	    	<div class="about-p">
-		    	<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry., Lorem Ipsum  dummy text ever since dummy text of the printing and usings 1500s,Duis aute irure dolor in reprehenderit in voluptate velit esse when an,Lorem Ipsum has been the industry's standard dummy text ever since dummy text of the printing and usings 1500s, </p>
-				<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since dummy text of the printing and usings 1500s,Duis aute irure dolor in reprehenderit in voluptate velit Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since dummy text of the printing and usings 1500s,Duis aute irure dolor in reprehenderit in voluptate velit</p>
-				<p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+		    	<p class="para">We have Nutrition tips form the experts to guide you about the facts of true Nutrition and best suggestion in the market regarding supplements. We have online @RockStone Shop to check about various supplements and there expected price. </p>
+<br>
+				<p class="para">We have three level of certification or certificate for Gym owners to reach at global standard with @RockStone Gym </p>
+<br>
+				<p class="para">1.  @RockStone Certified Begineer : Its for very basic Gyms with small infrastructure and upto 100 consumer base.</p>
+				<p class="para">2.  @RockStone Certified Moderate : Its for mibble level Gyms with moderate infrastructure and from 100 to 1000 consumer base.</p>
+				<p class="para">3.  @RockStone Certified Advanced : Its for Highest level of certification for Gyms with high infrastructure and above 1000 consumer base.</p>
+<br>
+				<p class="para">We have various online articles and videos available for fitness tips, Nutrition, Muscle building excercises, daily rotune, dieting along with diet chart for guiding and preparing consumers for there regaular and intense excercise.</p>
 				<div class="read_more">
 					<a class="btn" href="details.html">read more</a>
 				</div>
@@ -150,34 +156,38 @@
 	<div class="footer">
 		<!-- start span_of_4 -->
 		<div class="span_of_4">
-			<div class="span1_of_4">
-				<h4>popular post</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				<ul class="f_nav1">
-					<li class="timer"><a href="#">25-september 2013 </a></li>
-				</ul>
-				<p class="top">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				<ul class="f_nav1">
-					<li class="timer"><a href="#">25-september 2013 </a></li>
-				</ul>
-			</div>
-			<div class="span1_of_4">
-				<h4>tags</h4>
-				<p>It is a long established fact that a reader will be distracted by the<big>readable</big> content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal <big>blog</big> Many desktop publishing packages and web page editors now use Lorem.</p>
-			</div>
-			<div class="span1_of_4">
-				<h4>a little about us</h4>
-				<p class="btm">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-				<p>It is a long established fact that a reader will be of a page when looking at its layout.</p>
-
-			</div>
-			<div class="span1_of_4">
-				<h4>get in touch</h4>
-				<p class="btm">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
-				<p class="btm1 pin">Texas, US</p>
-				<p class="btm1 mail"><a href="mailto:info@mycompany.com">info(at)mycompany.com </a></p>
-				<p class="call">01234 444 777</p>
-			</div>
+				<div class="span1_of_4">
+					<h4>popular post</h4>
+					<p>Reduce your weight upto 10Kg in 10 days.</p>
+					<ul class="f_nav1">
+						<li class="timer"><a href="#">26 March 2015 </a></li>
+					</ul>
+					<p class="top">Gain 10Kg muscles weight in just 2 month.</p>
+					<ul class="f_nav1">
+						<li class="timer"><a href="#">25 March 2015 </a></li>
+					</ul>
+					<p class="top">Attractive ABS in just 2 month.</p>
+					<ul class="f_nav1">
+						<li class="timer"><a href="#">27 March 2015 </a></li>
+					</ul>
+				</div>
+				<div class="span1_of_4">
+					<h4>tags</h4>
+					<p>We are providers of <big>Gym</big> in india <big>standardize</big> the process of opening new gym. Providing <big>health advices</big>. Provide <big>Nutrition</big> tips. Provide online <big>Videos</big> and <big>Articles</big> for excercises and fitness tips. Providing <big>frenchies</big> of @RockStone Gym to existing and new Gyms. Maninting the <big>global standard</big> in fitness for all @RockStone Gyms.</p>
+				</div>
+				<div class="span1_of_4">
+					<h4>a little about us</h4>
+					<p class="btm">We are the new industory in fitness and wanted to standardize the process of opening the new GYM and maintaing there standards to global level.</p>
+					<p>New provide assistance in opening new GYM to starters selling frenchies of @RockStone GYM.</p>
+					<p>We provide health and nutrition tips with videos and articles.</p>
+				</div>
+				<div class="span1_of_4">
+					<h4>get in touch</h4>
+					<p class="btm">We have started new chain of Gyms in india and looking for the curious people who want to open a new GYM in india according to world standard or want to  convert his/her existing GYM to global level GYM with @RockStone GYM.</p>
+					<p class="btm1 pin">Faridabad, Haryana, India</p>
+					<p class="btm1 mail"><a href="mailto:rockstonegym@rockstonegym.com">info@rockstone.com </a></p>
+					<p class="call">91-9810700893</p>
+				</div>
 			<div class="clear"></div>
 		</div>
 	</div>
@@ -208,13 +218,13 @@
 		<div class="social-icons">
 		    <ul>
 		      <li><a href="#" target="_blank"></a></li>
-			  <li><a href="#" target="_blank"></a></li>
-		      <li><a href="#" target="_blank"></a></li>
-			  <li><a href="#" target="_blank"></a></li>
-			</ul>
+			<li><a href="http://www.facebook.com/rockStoneGym" target="_blank"></a></li>
+		      	<li><a href="#" target="_blank"></a></li>
+			<li><a href="http://www.linkedin.com/company/rockstone-gym" target="_blank"></a></li>
+		     </ul>
 		</div>
 		<div class="copy">
-			<p class="link"><span>&copy; 2014 Webworld-v2. All rights reserved | Template by&nbsp;<a href="http://w3layouts.com/"> W3Layouts</a></span></p>
+			<p class="link"><span>&copy; 2015 @RockStone Gym. All rights reserved | Template by&nbsp;<a href="http://www.rockstonegym.com/">@RockStone Gym</a></span></p>
 		</div>
 		<div class="clear"></div>
 	</div>
