--- a/web/web/index.html
+++ b/web/web/index.html
@@ -85,9 +85,9 @@ jQuery(document).ready(function(jQuery) {
 				<ul>
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About us</a></li>
-					<li><a href="service.html">Service</a></li>
-					<li><a href="index.html">Pages</a></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="service.html">Gym Locator</a></li>
+					<li><a href="index.html">Videos</a></li>
+					<li><a href="blog.html">Artcles</a></li>
 					<li><a href="contact.html">Contact us</a></li>
 				</ul>
 			</div>
@@ -101,9 +101,9 @@ jQuery(document).ready(function(jQuery) {
 				<ul>
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About us</a></li>
-					<li><a href="service.html">Service</a></li>
-					<li><a href="index.html">Pages</a></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="service.html">Gym Locator</a></li>
+					<li><a href="index.html">Videos</a></li>
+					<li><a href="blog.html">Articles</a></li>
 					<li><a href="contact.html">Contact us</a></li>
 				</ul>
 			</div>
