--- a/web/smartphone/index.html
+++ b/web/smartphone/index.html
@@ -240,7 +240,7 @@ jQuery(document).ready(function($) {
 					<div class="span1_of_3">
 						<a href="details.html"><img src="smartphone/images/global_level.jpg" alt=""/></a>
 						<div class="span1_of_3_text">
-							<h3><a href="details.html">Be the part of @RockStoen Gym</a></h3>
+							<h3><a href="details.html">Be the part of @RockStone Gym</a></h3>
 							<p>We are providing the chance to small and middle size Gym to be the part of @RockStone Gym with our free convertion policy and take your GYm to global level.</p>
 						</div>
 					</div>
