--- a/web/web/about.html
+++ b/web/web/about.html
@@ -46,12 +46,12 @@
 	<div class="header_sub">
 		<div class="h_menu">
 			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="about.html">About us</a></li>
-				<li><a href="service.html">Gym Locator</a></li>
-				<li><a href="index.html">Videos</a></li>
-				<li><a href="blog.html">Articles</a></li>
-				<li><a href="contact.html">Contact us</a></li>
+					<li class="active"><a href="index.php?page=index">Home</a></li>
+					<li><a href="index.php?page=about">About us</a></li>
+					<li><a href="index.php?page=index">Gym Locator</a></li>
+					<li><a href="index.php?page=index">Videos</a></li>
+					<li><a href="index.php?page=index">Artcles</a></li>
+					<li><a href="index.php?page=contact">Contact us</a></li>
 			</ul>
 		</div>
 		<div class="h_search">
@@ -62,12 +62,12 @@
 		</div>
         <div class="menu">
         	<ul>
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="about.html">About us</a></li>
-				<li><a href="service.html">Gym Locator</a></li>
-				<li><a href="index.html">Videos</a></li>
-				<li><a href="blog.html">Artcles</a></li>
-				<li><a href="contact.html">Contact us</a></li>
+					<li class="active"><a href="index.php?page=index">Home</a></li>
+					<li><a href="index.php?page=about">About us</a></li>
+					<li><a href="index.php?page=index">Gym Locator</a></li>
+					<li><a href="index.php?page=index">Videos</a></li>
+					<li><a href="index.php?page=index">Artcles</a></li>
+					<li><a href="index.php?page=contact">Contact us</a></li>
             </ul>
         </div>
         <div class="search">
