--- a/web/mobile/index.html
+++ b/web/mobile/index.html
@@ -60,11 +60,12 @@ jQuery(function(){
 			<div class="header_sub">
 					<div class="drp-dwn">
 					 	<select onchange="window.location=this.options[this.selectedIndex].value">
-							<option value="index.html">Home</option>
-							<option value="about.html">About</option>
-							<option value="service.html">Services</option>
-							<option value="blog.html">Blog</option>
-							<option value="contact.html">Contact</option>
+							<option value="index.php?page=index">Home</option>
+							<option value="index.php?page=about">About</option>
+							<option value="index.php?page=index">Gym Locator</option>
+							<option value="index.php?page=index">Videos</option>
+							<option value="index.php?page=index">Articles</option>
+							<option value="index.php?page=contact">Contact</option>
 						</select>
 					</div>
 			</div>
