--- a/web/smartphone/contact.html
+++ b/web/smartphone/contact.html
@@ -41,12 +41,12 @@ hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </scri
 	<div class="header_sub">
         <div class="menu">
         	<ul>
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="about.html">About us</a></li>
-				<li><a href="service.html">Service</a></li>
-				<li><a href="index.html">Pages</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html">Contact us</a></li>
+					<li class="active"><a href="index.php?page=index">Home</a></li>
+					<li><a href="index.php?page=about">About us</a></li>
+					<li><a href="index.php?page=index">Gym Locator</a></li>
+					<li><a href="index.php?page=index">Videos</a></li>
+					<li><a href="index.php?page=index">Artcles</a></li>
+					<li><a href="index.php?page=contact">Contact us</a></li>
             </ul>
         </div>
         <div class="search">
