--- a/web/web/index.html
+++ b/web/web/index.html
@@ -69,6 +69,7 @@ jQuery(document).ready(function(jQuery) {
 					      <li><a href="http://www.facebook.com/rockStoneGym" target="_blank"></a></li>
 					      <li><a href="#" target="_blank"></a></li>
 					      <li><a href="http://www.linkedin.com/company/rockstone-gym" target="_blank"></a></li>
+					      <li><a href="https://plus.google.com/115078952264710636605" rel="publisher">Google+</a></li>
 					    </ul>
 					</div>
 					<div class="clear"></div>
@@ -407,6 +408,7 @@ jQuery(document).ready(function(jQuery) {
 					<li><a href="http://www.facebook.com/rockStoneGym" target="_blank"></a></li>
 				      	<li><a href="#" target="_blank"></a></li>
 					<li><a href="http://www.linkedin.com/company/rockstone-gym" target="_blank"></a></li>
+					<li><a href="https://plus.google.com/115078952264710636605" rel="publisher">Google+</a></li>
 				     </ul>
 				</div>
 				<div class="copy">
