--- a/web/web/index.html
+++ b/web/web/index.html
@@ -55,6 +55,7 @@ jQuery(document).ready(function(jQuery) {
 </script>
 </head>
 <body>
+ <a href="https://plus.google.com/115078952264710636605" rel="publisher"></a>
 	<div class="fluid_container">
 		<!-- Start of logo header-->
 		<div class="header_bg">
@@ -69,7 +70,6 @@ jQuery(document).ready(function(jQuery) {
 					      <li><a href="http://www.facebook.com/rockStoneGym" target="_blank"></a></li>
 					      <li><a href="#" target="_blank"></a></li>
 					      <li><a href="http://www.linkedin.com/company/rockstone-gym" target="_blank"></a></li>
-					      <li><a href="https://plus.google.com/115078952264710636605" rel="publisher">Google+</a></li>
 					    </ul>
 					</div>
 					<div class="clear"></div>
@@ -408,7 +408,6 @@ jQuery(document).ready(function(jQuery) {
 					<li><a href="http://www.facebook.com/rockStoneGym" target="_blank"></a></li>
 				      	<li><a href="#" target="_blank"></a></li>
 					<li><a href="http://www.linkedin.com/company/rockstone-gym" target="_blank"></a></li>
-					<li><a href="https://plus.google.com/115078952264710636605" rel="publisher">Google+</a></li>
 				     </ul>
 				</div>
 				<div class="copy">
